Fixed the size on firefox but not chrome

--- a/styles.css
+++ b/styles.css
@@ -150,7 +150,7 @@ section p {
     text-decoration: none;
     color: #e0e0e0;
     /* Light gray */
-    position: relative;
+    width: 100%; /* Add width to chapter-card */
 }
 
 .chapter-card:hover {
@@ -480,7 +480,9 @@ ul li span {
 
 .page-stack__item {
     position: absolute;
-    width: 300px;
+    width: 400px;
+    height: auto;
+        /* Maintain aspect ratio */
     /* Add some margin for mobile */
     opacity: 0.8;
 }
@@ -493,9 +495,12 @@ ul li span {
 
 .video-container {
     position: relative;
-    width: 100%;
-    padding-bottom: 56.25%;
-    /* 16:9 aspect ratio */
+    width: 50%; /* Or a percentage that suits your desired width relative to the parent */
+    /* max-width: 500px; This will prevent it from getting wider than 500px */
+    margin: 20px auto; /* This centers the container horizontally and adds vertical margin */
+    padding-bottom: calc(500px * 9 / 16); /* Maintain 16:9 aspect ratio based on max-width */
+    height: 0;
+    overflow: hidden;
 }
 
 .video-container iframe {
